--- a/openBVE/OpenBve/Data/Languages/cs-CZ.cfg
+++ b/openBVE/OpenBve/Data/Languages/cs-CZ.cfg
@@ -112,46 +112,59 @@ blackbox_format_csv = Hodnoty oddělené středníkem (*.csv)
 blackbox_format_text = Formátovaný text
 blackbox_export = Export...
 
-[getaddons]
-title = Získat doplňky
-filter = Filtr:
-filter_routes = Tratě
-filter_trains = Vlaky
-filter_libraries = Knihovny
-filter_sharedlibraries = Sdílené knihovny
-filter_nowips = Ne WIP
-filter_onlyupdates = Jen aktualizace
-package = Detaily balíčku
-package_install = Instalovat
-package_install_progress = Instaluji doplňky...
-package_install_download = Stahuji doplňky...
-package_install_failure = Následující balíček nemůže být instalován:
-package_remove = Odebrat
-package_remove_progress = Odebírám doplňky...
-package_remove_failure = Následující balíček nemůže být odebrán:
-package_country = Země:\x20
-package_city = Město:\x20
-package_operator = Provozovatel:\x20
-package_fictional = Fiktivní
-package_author = Autor:\x20
-package_version_latest = Poslední verze:\x20
-package_version_installed = Instalovaná verze:\x20
-screenshot_previous = Předchozí
-screenshot_next = Následující
-connect = Připojování k serveru...
-connect_error = Nelze načíst databází získanou ze serveru:
-connect_failure = Nelze se spojit se serverem.
-updates = K dispozici jsou aktualizace pro některý z vašich doplňků.
-updates_install = K dispozici jsou aktualizace pro některý z vašich doplňků. Chcete je nyní instalovat?
-updates_nomore = K dispozici nejsou žádné další aktualizace.
-other_countries = Ostatní země
-other_cities = Ostatní města
-other_operators = Ostatní provozovatelé
-suggest_1 = Vašemu výběru odpovídají následující balíčky:
-suggest_2 = Chcete instalovat tyto balíčky také?
-redundant_1 = Po odebrání vybraného doplňku nebudou potřeba ke správné funkčnosti následující balíčky:
-redundant_2 = Chcete odstranit tyto balíčky také?
-confirmation = Za účelem instalace vybraného doplňku bude staženo celkem [size] dat. Chcete pokračovat?
+[packages]
+proceed = Proceed...
+proceed_anyway = Proceed Anyway
+processing = Processing, please wait...
+shownlist = These are shown in the list below:
+selection_none = No package selected.
+selection_none_website = No website provided.
+install = Install
+install_button = Install Package
+install_header = Install a Package
+install_invalid = This file does not appear to be a valid openBVE package.
+install_version_new = The selected package is already installed, and is a newer version.
+install_version_old = The selected package is already installed, and is an older version.
+install_version_same = The selected package is already installed, and is an identical version.
+install_success = Package installation was successful.
+install_success_header = Installation Successful
+install_success_files = A list of files installed is shown below:
+install_select = Select Package......
+install_dependancies_unmet = The current package has unmet dependancies.
+install_dependancies_unmet_header = Dependancy Error
+creation_button = Create Package
+creation_header = Create a Package
+creation_saveas_button = Save As...
+creation_saveas_label = Save package as:
+creation_dependancies_nextstep = Package details and dependancies may be assigned in the following steps.
+creation_clearselection = Clear Selection
+creation_additems = Add Item(s)
+creation_selecteditems = The following files and folders will be packaged:
+creation_new_guid = The new package has been assinged the following GUID:
+creation_header = Enter Package Details
+creation_name = Please enter a package name.
+creation_author = Please enter a package author.
+creation_description = Please enter a package description.
+creation_version = Please enter a valid package version number in the following format: \r\n 1.0.0
+creation_version_invalid = You have entered an invalid version number. \r\n Please try again.
+creation_success = Package creation was successful.
+creation_success_header = Package Creation Successful
+creation_success_files = The following files were added to your package:
+creation_proceed = Proceed......
+creation_invalid_filename = The selected filename is invalid- Please retry.
+creation_new_id = The new package has been assinged the following GUID:
+creation_replace_id = Replacing the package with the following GUID:
+creation_save = Save Package
+replace_select = Replace this Package
+replace_choose = Please select the package you wish to replace:
+type_route = Route
+type_train = Train
+type_other = Other
+type_select = Please select the package type:
+uninstall_button = Uninstall Package
+uninstall_broken = Some existing packages may be broken by this action.
+uninstall_missing_xml = Unable to uninstall the selected package. \r\n XML file list missing.
+database_save_error = An error occured whilst saving the package database. \r\n Please check for write permissions.
 
 [controls]
 title = Nastavení ovládacích prvků
