--- a/openBVE/OpenBve/Data/Languages/en-GB.cfg
+++ b/openBVE/OpenBve/Data/Languages/en-GB.cfg
@@ -113,9 +113,14 @@ blackbox_format_text = Formatted text
 blackbox_export = Export...
 
 [packages]
+proceed = Proceed...
+proceed_anyway = Proceed Anyway
+processing = Processing, please wait...
+shownlist = These are shown in the list below:
 selection_none = No package selected.
 selection_none_website = No website provided.
 install = Install
+install_button = Install Package
 install_header = Install a Package
 install_invalid = This file does not appear to be a valid openBVE package.
 install_version_new = The selected package is already installed, and is a newer version.
@@ -125,6 +130,17 @@ install_success = Package installation was successful.
 install_success_header = Installation Successful
 install_success_files = A list of files installed is shown below:
 install_select = Select Package......
+install_dependancies_unmet = The current package has unmet dependancies.
+install_dependancies_unmet_header = Dependancy Error
+creation_button = Create Package
+creation_header = Create a Package
+creation_saveas_button = Save As...
+creation_saveas_label = Save package as:
+creation_dependancies_nextstep = Package details and dependancies may be assigned in the following steps.
+creation_clearselection = Clear Selection
+creation_additems = Add Item(s)
+creation_selecteditems = The following files and folders will be packaged:
+creation_new_guid = The new package has been assinged the following GUID:
 creation_header = Enter Package Details
 creation_name = Please enter a package name.
 creation_author = Please enter a package author.
@@ -139,6 +155,13 @@ creation_invalid_filename = The selected filename is invalid- Please retry.
 creation_new_id = The new package has been assinged the following GUID:
 creation_replace_id = Replacing the package with the following GUID:
 creation_save = Save Package
+replace_select = Replace this Package
+replace_choose = Please select the package you wish to replace:
+type_route = Route
+type_train = Train
+type_other = Other
+type_select = Please select the package type:
+uninstall_button = Uninstall Package
 uninstall_broken = Some existing packages may be broken by this action.
 uninstall_missing_xml = Unable to uninstall the selected package. \r\n XML file list missing.
 database_save_error = An error occured whilst saving the package database. \r\n Please check for write permissions.
