--- a/openBVE/OpenBve/Data/Languages/es-ES.cfg
+++ b/openBVE/OpenBve/Data/Languages/es-ES.cfg
@@ -112,46 +112,59 @@ blackbox_format_csv = Valor separado por comas
 blackbox_format_text = Texto formateado
 blackbox_export = Exportar...
 
-[getaddons]
-title = Obtener extensiones
-filter = Filtro:
-filter_routes = Rutas
-filter_trains = Trenes
-filter_libraries = Bibliotecas
-filter_sharedlibraries = Bibliotecas compartidas
-filter_nowips = Solo versiones acabadas
-filter_onlyupdates = Solo actualizaciones
-package = Detalles del paquete
-package_install = Instalar
-package_install_progress = Instalando las extensiones...
-package_install_download = Descargando las extensiones...
-package_install_failure = No se han podido instalar los paquetes siguientes:
-package_remove = Eliminar
-package_remove_progress = Eliminando extensiones...
-package_remove_failure = No se han podido eliminar los paquetes siguientes:
-package_country = País:\x20
-package_city = Ciudad:\x20
-package_operator = Operador:\x20
-package_fictional = Ficticia
-package_author = Autor:\x20
-package_version_latest = Última versión:\x20
-package_version_installed = Versión instalada:\x20
-screenshot_previous = Atrás
-screenshot_next = Siguiente
-connect = Conectando con el servidor...
-connect_error = No se ha podido cargar la base de datos obtenida del servidor:
-connect_failure = No se ha podido conectar con el servidor.
-updates = Hay actualizaciones disponibles para algunas extensiones.
-updates_install = Hay actualizaciones disponibles para algunas extensiones. ¿Desea instalarlas ahora??
-updates_nomore = No hay más actualizaciones disponibles.
-other_countries = Otros países
-other_cities = Otras ciudades
-other_operators = Otros operadores
-suggest_1 = Paquetes recomendados según la selección:
-suggest_2 = ¿Desea instalarlos también?
-redundant_1 = Los paquetes siguientes no funcionarán correctamente o no seran necesarios después de eliminar la extensión siguiente:
-redundant_2 = ¿Desea eliminarlos también?
-confirmation = Para instalar la extensión seleccionada, se descargarán [size]. ¿Desea continuar?
+[packages]
+proceed = Proceed...
+proceed_anyway = Proceed Anyway
+processing = Processing, please wait...
+shownlist = These are shown in the list below:
+selection_none = No package selected.
+selection_none_website = No website provided.
+install = Install
+install_button = Install Package
+install_header = Install a Package
+install_invalid = This file does not appear to be a valid openBVE package.
+install_version_new = The selected package is already installed, and is a newer version.
+install_version_old = The selected package is already installed, and is an older version.
+install_version_same = The selected package is already installed, and is an identical version.
+install_success = Package installation was successful.
+install_success_header = Installation Successful
+install_success_files = A list of files installed is shown below:
+install_select = Select Package......
+install_dependancies_unmet = The current package has unmet dependancies.
+install_dependancies_unmet_header = Dependancy Error
+creation_button = Create Package
+creation_header = Create a Package
+creation_saveas_button = Save As...
+creation_saveas_label = Save package as:
+creation_dependancies_nextstep = Package details and dependancies may be assigned in the following steps.
+creation_clearselection = Clear Selection
+creation_additems = Add Item(s)
+creation_selecteditems = The following files and folders will be packaged:
+creation_new_guid = The new package has been assinged the following GUID:
+creation_header = Enter Package Details
+creation_name = Please enter a package name.
+creation_author = Please enter a package author.
+creation_description = Please enter a package description.
+creation_version = Please enter a valid package version number in the following format: \r\n 1.0.0
+creation_version_invalid = You have entered an invalid version number. \r\n Please try again.
+creation_success = Package creation was successful.
+creation_success_header = Package Creation Successful
+creation_success_files = The following files were added to your package:
+creation_proceed = Proceed......
+creation_invalid_filename = The selected filename is invalid- Please retry.
+creation_new_id = The new package has been assinged the following GUID:
+creation_replace_id = Replacing the package with the following GUID:
+creation_save = Save Package
+replace_select = Replace this Package
+replace_choose = Please select the package you wish to replace:
+type_route = Route
+type_train = Train
+type_other = Other
+type_select = Please select the package type:
+uninstall_button = Uninstall Package
+uninstall_broken = Some existing packages may be broken by this action.
+uninstall_missing_xml = Unable to uninstall the selected package. \r\n XML file list missing.
+database_save_error = An error occured whilst saving the package database. \r\n Please check for write permissions.
 
 [controls]
 title = Controles
