--- a/openBVE/OpenBve/Data/Languages/fr-FR.cfg
+++ b/openBVE/OpenBve/Data/Languages/fr-FR.cfg
@@ -112,46 +112,59 @@ blackbox_format_csv = Valeurs sép. par des virgules
 blackbox_format_text = Texte formaté
 blackbox_export = Exporter...
 
-[getaddons]
-title = Gérer les extensions
-filter = Filtre :
-filter_routes = Itinéraires
-filter_trains = Trains
-filter_libraries = Bibliothèques
-filter_sharedlibraries = Biblio. partagées
-filter_nowips = Pas de TECs
-filter_onlyupdates = Seulement les MAJs
-package = Détails du paquet
-package_install = Installation
-package_install_progress = Installation des extensions en cours...
-package_install_download = Téléchargement des extensions en cours...
-package_install_failure = Les paquets suivants ne peut pas être installés :
-package_remove = Désinstallation
-package_remove_progress = Désinstallation des extensions en cours...
-package_remove_failure = Les paquets suivants ne peut pas être désinstallés :
-package_country = Pays :\x20
-package_city = Ville :\x20
-package_operator = Opérateur :\x20
-package_fictional = Imaginaire
-package_author = Auteur :\x20
-package_version_latest = Dernière version :\x20
-package_version_installed = Version installée:\x20
-screenshot_previous = Précédent
-screenshot_next = Suivant
-connect = Connexion au serveur en cours...
-connect_error = La base de données obtenue du serveur ne peut pas être chargée :
-connect_failure = Connexion au serveur impossible.
-updates = Des mises à jour sont disponibles pour certaines de vos extensions.
-updates_install = Des mises à jour sont disponibles pour certaines de vos extensions. Voulez-vous les installer maintenant ?
-updates_nomore = Pas de mise à jour disponible.
-other_countries = Autres pays
-other_cities = Autres villes
-other_operators = Autres opérateurs
-suggest_1 = Les paquets suivants sont utilisés par les paquets que vous avez sélectionnés :
-suggest_2 = Voulez-vous aussi installer ces paquets ?
-redundant_1 = Après la désinstallation des extensions sélectionnées, les paquets suivants ne fonctionneront plus correctement ou ne seront plus requis :
-redundant_2 = Voulez-vous aussi désinstaller ces paquets ?
-confirmation = Pour installer les extensions sélectionnées, la taille totale du téléchargement est de [size]. Voulez-vous continuer ?
+[packages]
+proceed = Proceed...
+proceed_anyway = Proceed Anyway
+processing = Processing, please wait...
+shownlist = These are shown in the list below:
+selection_none = No package selected.
+selection_none_website = No website provided.
+install = Install
+install_button = Install Package
+install_header = Install a Package
+install_invalid = This file does not appear to be a valid openBVE package.
+install_version_new = The selected package is already installed, and is a newer version.
+install_version_old = The selected package is already installed, and is an older version.
+install_version_same = The selected package is already installed, and is an identical version.
+install_success = Package installation was successful.
+install_success_header = Installation Successful
+install_success_files = A list of files installed is shown below:
+install_select = Select Package......
+install_dependancies_unmet = The current package has unmet dependancies.
+install_dependancies_unmet_header = Dependancy Error
+creation_button = Create Package
+creation_header = Create a Package
+creation_saveas_button = Save As...
+creation_saveas_label = Save package as:
+creation_dependancies_nextstep = Package details and dependancies may be assigned in the following steps.
+creation_clearselection = Clear Selection
+creation_additems = Add Item(s)
+creation_selecteditems = The following files and folders will be packaged:
+creation_new_guid = The new package has been assinged the following GUID:
+creation_header = Enter Package Details
+creation_name = Please enter a package name.
+creation_author = Please enter a package author.
+creation_description = Please enter a package description.
+creation_version = Please enter a valid package version number in the following format: \r\n 1.0.0
+creation_version_invalid = You have entered an invalid version number. \r\n Please try again.
+creation_success = Package creation was successful.
+creation_success_header = Package Creation Successful
+creation_success_files = The following files were added to your package:
+creation_proceed = Proceed......
+creation_invalid_filename = The selected filename is invalid- Please retry.
+creation_new_id = The new package has been assinged the following GUID:
+creation_replace_id = Replacing the package with the following GUID:
+creation_save = Save Package
+replace_select = Replace this Package
+replace_choose = Please select the package you wish to replace:
+type_route = Route
+type_train = Train
+type_other = Other
+type_select = Please select the package type:
+uninstall_button = Uninstall Package
+uninstall_broken = Some existing packages may be broken by this action.
+uninstall_missing_xml = Unable to uninstall the selected package. \r\n XML file list missing.
+database_save_error = An error occured whilst saving the package database. \r\n Please check for write permissions.
 
 [controls]
 title = Personnaliser les commandes
