--- a/openBVE/OpenBve/Data/Languages/hu-HU.cfg
+++ b/openBVE/OpenBve/Data/Languages/hu-HU.cfg
@@ -112,46 +112,59 @@ blackbox_format_csv = CSV fájl
 blackbox_format_text = Formázott szöveg
 blackbox_export = Exportálás...
 
-[getaddons]
-title = Kiegészítők telepítése
-filter = Szűrők:
-filter_routes = Pályák
-filter_trains = Vonatok
-filter_libraries = Könyvtárak
-filter_sharedlibraries = Megosztott könyvtárak
-filter_nowips = Csak készek
-filter_onlyupdates = Csak frissítések
-package = A kiegészítőről
-package_install = Telepítés
-package_install_progress = Kiegészítők telepítése...
-package_install_download = Kiegészítők letöltése...
-package_install_failure = A következő csomagok telepítése nem sikerült:
-package_remove = Eltávolítás
-package_remove_progress = Kiegészítők eltávolítása...
-package_remove_failure = A következő csomagok eltávolítása nem sikerült:
-package_country = Ország:\x20
-package_city = Város:\x20
-package_operator = Szolgáltató:\x20
-package_fictional = Fiktív
-package_author = Készítő:\x20
-package_version_latest = Legfrissebb verzió:\x20
-package_version_installed = Telepített verzió:\x20
-screenshot_previous = Előző
-screenshot_next = Következő
-connect = Csatlakozás a kiszolgálóhoz...
-connect_error = Nem sikerült betölteni a kiszolgálóról érkezett adatbázist:
-connect_failure = Nem sikerült csatlakozni a kiszolgálóhoz.
-updates = Frissítések érhetőek el egyes kiegészítőkhöz.
-updates_install = Frissítések érhetőek el egyes kiegészítőkhöz. Szeretné most telepíteni őket?
-updates_nomore = Nem érhetőek el további frissítések.
-other_countries = Más országok
-other_cities = Más városok
-other_operators = Más szolgáltatók
-suggest_1 = A kijelölt kiegészítő a következő csomagok telepítését javasolja:
-suggest_2 = Szeretné ezeket a csomagokat is telepíteni?
-redundant_1 = Ha a kijelölt kiegészítőt eltávolítja, a következő csomagok nem fognak tovább működni, vagy már nem lesz rájuk szükség:
-redundant_2 = Szeretné eltávolítani ezeket a csomagokat is?
-confirmation = A kijelölt kiegészítő telepítéséhez összesen [size] adatot kell letölteni. Szeretné folytatni?
+[packages]
+proceed = Proceed...
+proceed_anyway = Proceed Anyway
+processing = Processing, please wait...
+shownlist = These are shown in the list below:
+selection_none = No package selected.
+selection_none_website = No website provided.
+install = Install
+install_button = Install Package
+install_header = Install a Package
+install_invalid = This file does not appear to be a valid openBVE package.
+install_version_new = The selected package is already installed, and is a newer version.
+install_version_old = The selected package is already installed, and is an older version.
+install_version_same = The selected package is already installed, and is an identical version.
+install_success = Package installation was successful.
+install_success_header = Installation Successful
+install_success_files = A list of files installed is shown below:
+install_select = Select Package......
+install_dependancies_unmet = The current package has unmet dependancies.
+install_dependancies_unmet_header = Dependancy Error
+creation_button = Create Package
+creation_header = Create a Package
+creation_saveas_button = Save As...
+creation_saveas_label = Save package as:
+creation_dependancies_nextstep = Package details and dependancies may be assigned in the following steps.
+creation_clearselection = Clear Selection
+creation_additems = Add Item(s)
+creation_selecteditems = The following files and folders will be packaged:
+creation_new_guid = The new package has been assinged the following GUID:
+creation_header = Enter Package Details
+creation_name = Please enter a package name.
+creation_author = Please enter a package author.
+creation_description = Please enter a package description.
+creation_version = Please enter a valid package version number in the following format: \r\n 1.0.0
+creation_version_invalid = You have entered an invalid version number. \r\n Please try again.
+creation_success = Package creation was successful.
+creation_success_header = Package Creation Successful
+creation_success_files = The following files were added to your package:
+creation_proceed = Proceed......
+creation_invalid_filename = The selected filename is invalid- Please retry.
+creation_new_id = The new package has been assinged the following GUID:
+creation_replace_id = Replacing the package with the following GUID:
+creation_save = Save Package
+replace_select = Replace this Package
+replace_choose = Please select the package you wish to replace:
+type_route = Route
+type_train = Train
+type_other = Other
+type_select = Please select the package type:
+uninstall_button = Uninstall Package
+uninstall_broken = Some existing packages may be broken by this action.
+uninstall_missing_xml = Unable to uninstall the selected package. \r\n XML file list missing.
+database_save_error = An error occured whilst saving the package database. \r\n Please check for write permissions.
 
 [controls]
 title = A kezelőszervek beállítása
