--- a/openBVE/OpenBve/Data/Languages/ja-JP.cfg
+++ b/openBVE/OpenBve/Data/Languages/ja-JP.cfg
@@ -112,46 +112,59 @@ blackbox_format_csv = カンマ区切り
 blackbox_format_text = 固定長テキスト
 blackbox_export = 書き出し...
 
-[getaddons]
-title = アドオン入手
-filter = フィルター:
-filter_routes = 路線
-filter_trains = 車両
-filter_libraries = ライブラリ
-filter_sharedlibraries = 共有ライブラリ
-filter_nowips = WIPなし
-filter_onlyupdates = アップデートのみ
-package = パッケージ詳細
-package_install = インストール
-package_install_progress = アドオンインストール中...
-package_install_download = アドオンダウンロード中...
-package_install_failure = 下記のパッケージがインストールできませんでした:
-package_remove = 削除
-package_remove_progress = アドオン削除中...
-package_remove_failure = 下記のアドオンが削除できませんでした:
-package_country = 国:\x20
-package_city = 都市:\x20
-package_operator = 会社:\x20
-package_fictional = フィクション
-package_author = 作者:\x20
-package_version_latest = 最新バージョン:\x20
-package_version_installed = 導入済バージョン:\x20
-screenshot_previous = 前
-screenshot_next = 次
-connect = サーバに接続中...
-connect_error = データベースをロードできません。:
-connect_failure = サーバーに接続できません。
-updates = アドオンのアップデートが入手可能です。
-updates_install = アドオンのアップデートが入手可能です。インストールしますか？
-updates_nomore = アップデートはありません。
-other_countries = 他の国
-other_cities = 他の都市
-other_operators = 他の会社
-suggest_1 = 以下のパッケージがあります。:
-suggest_2 = パッケージをインストールしますか？
-redundant_1 = 下記のパッケージは、もう動作しないか、アドオン削除により必要なくなりました。:
-redundant_2 = これらのパッケージも削除しますか？
-confirmation = 選択したアドオンをインストールするには [size] のダウンロードが必要です。続けますか？
+[packages]
+proceed = Proceed...
+proceed_anyway = Proceed Anyway
+processing = Processing, please wait...
+shownlist = These are shown in the list below:
+selection_none = No package selected.
+selection_none_website = No website provided.
+install = Install
+install_button = Install Package
+install_header = Install a Package
+install_invalid = This file does not appear to be a valid openBVE package.
+install_version_new = The selected package is already installed, and is a newer version.
+install_version_old = The selected package is already installed, and is an older version.
+install_version_same = The selected package is already installed, and is an identical version.
+install_success = Package installation was successful.
+install_success_header = Installation Successful
+install_success_files = A list of files installed is shown below:
+install_select = Select Package......
+install_dependancies_unmet = The current package has unmet dependancies.
+install_dependancies_unmet_header = Dependancy Error
+creation_button = Create Package
+creation_header = Create a Package
+creation_saveas_button = Save As...
+creation_saveas_label = Save package as:
+creation_dependancies_nextstep = Package details and dependancies may be assigned in the following steps.
+creation_clearselection = Clear Selection
+creation_additems = Add Item(s)
+creation_selecteditems = The following files and folders will be packaged:
+creation_new_guid = The new package has been assinged the following GUID:
+creation_header = Enter Package Details
+creation_name = Please enter a package name.
+creation_author = Please enter a package author.
+creation_description = Please enter a package description.
+creation_version = Please enter a valid package version number in the following format: \r\n 1.0.0
+creation_version_invalid = You have entered an invalid version number. \r\n Please try again.
+creation_success = Package creation was successful.
+creation_success_header = Package Creation Successful
+creation_success_files = The following files were added to your package:
+creation_proceed = Proceed......
+creation_invalid_filename = The selected filename is invalid- Please retry.
+creation_new_id = The new package has been assinged the following GUID:
+creation_replace_id = Replacing the package with the following GUID:
+creation_save = Save Package
+replace_select = Replace this Package
+replace_choose = Please select the package you wish to replace:
+type_route = Route
+type_train = Train
+type_other = Other
+type_select = Please select the package type:
+uninstall_button = Uninstall Package
+uninstall_broken = Some existing packages may be broken by this action.
+uninstall_missing_xml = Unable to uninstall the selected package. \r\n XML file list missing.
+database_save_error = An error occured whilst saving the package database. \r\n Please check for write permissions.
 
 [controls]
 title = カスタマイズ
