--- a/openBVE/OpenBve/Data/Languages/nl-NL.cfg
+++ b/openBVE/OpenBve/Data/Languages/nl-NL.cfg
@@ -112,46 +112,59 @@ blackbox_format_csv = Door komma's gescheiden waarden (csv)
 blackbox_format_text = Geformatteerde tekst
 blackbox_export = Exporteren...
 
-[getaddons]
-title = Haal add-ons op
-filter = Filter:
-filter_routes = Routes
-filter_trains = Treinen
-filter_libraries = Bibliotheken
-filter_sharedlibraries = Gedeelde bibliotheken
-filter_nowips = Geen WIPs
-filter_onlyupdates = Alleen updates
-package = Pakketdetails
-package_install = Installeren
-package_install_progress = Installeert add-ons...
-package_install_download = Downloadt add-ons...
-package_install_failure = De volgende pakketten konden niet worden geinstalleerd:
-package_remove = Verwijderen
-package_remove_progress = Verwijdert add-ons...
-package_remove_failure = De volgende pakketten konden niet worden verwijderd:
-package_country = Land:\x20
-package_city = Stad:\x20
-package_operator = Bedrijf:\x20
-package_fictional = Fictief
-package_author = Auteur:\x20
-package_version_latest = Laatste versie:\x20
-package_version_installed = Geinstalleerde versie:\x20
-screenshot_previous = Vorige
-screenshot_next = Volgende
-connect = Maakt verbinding met server...
-connect_error = Kan de van de server verkregen database niet laden:
-connect_failure = Kan geen verbinding maken met de server.
-updates = Er zijn updates verkrijgbaar voor enkele van je add-ons.
-updates_install = Er zijn updates verkrijgbaar voor enkele van je add-ons. Wil je ze nu installeren?
-updates_nomore = Er zijn geen updates verkrijgbaar.
-other_countries = Andere landen
-other_cities = Andere steden
-other_operators = Andere bedrijven
-suggest_1 = De volgende pakketten worden door je selectie aanbevolen:
-suggest_2 = Wil je deze pakketten ook installeren?
-redundant_1 = De volgende pakketten zullen niet goed meer werken of zullen niet langer meer nodig zijn nadat je de geselecteerde add-on hebt verwijderd:
-redundant_2 = Wil je deze pakketten ook verwijderen?
-confirmation = Om de geselecteerde add-on te installeren, zal er in totaal [size] moeten worden gedownload. Wil je verder gaan?
+[packages]
+proceed = Proceed...
+proceed_anyway = Proceed Anyway
+processing = Processing, please wait...
+shownlist = These are shown in the list below:
+selection_none = No package selected.
+selection_none_website = No website provided.
+install = Install
+install_button = Install Package
+install_header = Install a Package
+install_invalid = This file does not appear to be a valid openBVE package.
+install_version_new = The selected package is already installed, and is a newer version.
+install_version_old = The selected package is already installed, and is an older version.
+install_version_same = The selected package is already installed, and is an identical version.
+install_success = Package installation was successful.
+install_success_header = Installation Successful
+install_success_files = A list of files installed is shown below:
+install_select = Select Package......
+install_dependancies_unmet = The current package has unmet dependancies.
+install_dependancies_unmet_header = Dependancy Error
+creation_button = Create Package
+creation_header = Create a Package
+creation_saveas_button = Save As...
+creation_saveas_label = Save package as:
+creation_dependancies_nextstep = Package details and dependancies may be assigned in the following steps.
+creation_clearselection = Clear Selection
+creation_additems = Add Item(s)
+creation_selecteditems = The following files and folders will be packaged:
+creation_new_guid = The new package has been assinged the following GUID:
+creation_header = Enter Package Details
+creation_name = Please enter a package name.
+creation_author = Please enter a package author.
+creation_description = Please enter a package description.
+creation_version = Please enter a valid package version number in the following format: \r\n 1.0.0
+creation_version_invalid = You have entered an invalid version number. \r\n Please try again.
+creation_success = Package creation was successful.
+creation_success_header = Package Creation Successful
+creation_success_files = The following files were added to your package:
+creation_proceed = Proceed......
+creation_invalid_filename = The selected filename is invalid- Please retry.
+creation_new_id = The new package has been assinged the following GUID:
+creation_replace_id = Replacing the package with the following GUID:
+creation_save = Save Package
+replace_select = Replace this Package
+replace_choose = Please select the package you wish to replace:
+type_route = Route
+type_train = Train
+type_other = Other
+type_select = Please select the package type:
+uninstall_button = Uninstall Package
+uninstall_broken = Some existing packages may be broken by this action.
+uninstall_missing_xml = Unable to uninstall the selected package. \r\n XML file list missing.
+database_save_error = An error occured whilst saving the package database. \r\n Please check for write permissions.
 
 [controls]
 title = Besturing instellen
