--- a/openBVE/OpenBve/Data/Languages/pl-PL.cfg
+++ b/openBVE/OpenBve/Data/Languages/pl-PL.cfg
@@ -112,46 +112,59 @@ blackbox_format_csv = CSV
 blackbox_format_text = Format tekstu
 blackbox_export = Eksport...
 
-[getaddons]
-title = Pobierz dodatki
-filter = Filtr:
-filter_routes = Trasy
-filter_trains = Pociągi
-filter_libraries = Biblioteki
-filter_sharedlibraries = Biblioteki współdzielone
-filter_nowips = Bez WIP
-filter_onlyupdates = Tylko aktualizacje
-package = Informacje o dodatku
-package_install = Instaluj
-package_install_progress = Instalowanie dodatków...
-package_install_download = Pobieranie dodatków...
-package_install_failure = Następujące dodatki nie mogły zostać zainstalowane:
-package_remove = Usuń
-package_remove_progress = Usuwanie dodatków...
-package_remove_failure = Następujące dodatki nie mogły zostać usunięte:
-package_country = Kraj:\x20
-package_city = Miasto:\x20
-package_operator = Przewoźnik:\x20
-package_fictional = Fikcyjna
-package_author = Autor:\x20
-package_version_latest = Aktualna wersja:\x20
-package_version_installed = Zainstalowana wersja:\x20
-screenshot_previous = Poprzedni
-screenshot_next = Następny
-connect = Łączenie z serwerem...
-connect_error = Nie można załadować bazy danych uzyskanej z serwera:
-connect_failure = Nie można połączyć się z serwerem.
-updates = Aktualizacje dla niektórych twoich dodatków są dostępne.
-updates_install = Aktualizacje dla niektórych twoich dodatków są dostępne. Zainstalować teraz?
-updates_nomore = Brak następnych aktualizacji.
-other_countries = Inne kraje
-other_cities = Inne miasta
-other_operators = Inni przewoźnicy
-suggest_1 = Sugerowane dodatki na podstawie twojego wyboru:
-suggest_2 = Chcesz je teraz zainstalować?
-redundant_1 = Następujące dodatki nie będą działać prawidłowo lub nie będą już potrzebne po usunięciu wybranych dodatków:
-redundant_2 = Czy chcesz usunąć te dodatki?
-confirmation = Aby zainstalować wybrany dodatek, zostanie pobrane [size]. Kontynuować?
+[packages]
+proceed = Proceed...
+proceed_anyway = Proceed Anyway
+processing = Processing, please wait...
+shownlist = These are shown in the list below:
+selection_none = No package selected.
+selection_none_website = No website provided.
+install = Install
+install_button = Install Package
+install_header = Install a Package
+install_invalid = This file does not appear to be a valid openBVE package.
+install_version_new = The selected package is already installed, and is a newer version.
+install_version_old = The selected package is already installed, and is an older version.
+install_version_same = The selected package is already installed, and is an identical version.
+install_success = Package installation was successful.
+install_success_header = Installation Successful
+install_success_files = A list of files installed is shown below:
+install_select = Select Package......
+install_dependancies_unmet = The current package has unmet dependancies.
+install_dependancies_unmet_header = Dependancy Error
+creation_button = Create Package
+creation_header = Create a Package
+creation_saveas_button = Save As...
+creation_saveas_label = Save package as:
+creation_dependancies_nextstep = Package details and dependancies may be assigned in the following steps.
+creation_clearselection = Clear Selection
+creation_additems = Add Item(s)
+creation_selecteditems = The following files and folders will be packaged:
+creation_new_guid = The new package has been assinged the following GUID:
+creation_header = Enter Package Details
+creation_name = Please enter a package name.
+creation_author = Please enter a package author.
+creation_description = Please enter a package description.
+creation_version = Please enter a valid package version number in the following format: \r\n 1.0.0
+creation_version_invalid = You have entered an invalid version number. \r\n Please try again.
+creation_success = Package creation was successful.
+creation_success_header = Package Creation Successful
+creation_success_files = The following files were added to your package:
+creation_proceed = Proceed......
+creation_invalid_filename = The selected filename is invalid- Please retry.
+creation_new_id = The new package has been assinged the following GUID:
+creation_replace_id = Replacing the package with the following GUID:
+creation_save = Save Package
+replace_select = Replace this Package
+replace_choose = Please select the package you wish to replace:
+type_route = Route
+type_train = Train
+type_other = Other
+type_select = Please select the package type:
+uninstall_button = Uninstall Package
+uninstall_broken = Some existing packages may be broken by this action.
+uninstall_missing_xml = Unable to uninstall the selected package. \r\n XML file list missing.
+database_save_error = An error occured whilst saving the package database. \r\n Please check for write permissions.
 
 [controls]
 title = Ustawienia klawiszy
