--- a/openBVE/OpenBve/Data/Languages/pt-PT.cfg
+++ b/openBVE/OpenBve/Data/Languages/pt-PT.cfg
@@ -112,46 +112,59 @@ blackbox_format_csv = Valores separados por vírgulas
 blackbox_format_text = texto formatado
 blackbox_export = Exportar...
 
-[getaddons]
-title = Obter acessórios
-filter = Filtro:
-filter_routes = Linhas
-filter_trains = Comboios
-filter_libraries = Livrarias
-filter_sharedlibraries = Livrarias partilhadas
-filter_nowips = Sem WIPs
-filter_onlyupdates = Somente actualizações
-package = Detalhes do pacote
-package_install = Instalar
-package_install_progress = A instalar os acessórios...
-package_install_download = A baixar os acessórios...
-package_install_failure = Os seguintes pacotes não foram instalados:
-package_remove = Remover
-package_remove_progress = A remover acessórios...
-package_remove_failure = Os seguintes pacotes não foram removidos:
-package_country = País:\x20
-package_city = Cidade:\x20
-package_operator = Operador:\x20
-package_fictional = Fictício
-package_author = Autor:\x20
-package_version_latest = Última versão:\x20
-package_version_installed = Versão instalada:\x20
-screenshot_previous = Anterior
-screenshot_next = Seguinte
-connect = A ligar ao servidor...
-connect_error = Não foi possível carregar a base de dados enviada pelo servidor:
-connect_failure = Não foi possível ligar ao servidor.
-updates = Estão disponíveis actualizações para alguns acessórios.
-updates_install = Estão disponíveis actualizações para alguns acessórios. Quer instalá-las agora?
-updates_nomore = Não estão disponíveis mais actualizações.
-other_countries = Outros países
-other_cities = Outras cidades
-other_operators = Outros operadores
-suggest_1 = A sua selecção sugere os seguintes pacotes:
-suggest_2 = Também pretende instalar estes pacotes?
-redundant_1 = Depois de remover o acessório seleccionado, os seguintes pacotes deixarão de funcionar correctamente ou deixarão de ser necessários:
-redundant_2 = Também deseja remover estes pacotes?
-confirmation = Para instalar o acessório seleccionado, um total de [size] tem de ser baixado. Deseja proseguir?
+[packages]
+proceed = Proceed...
+proceed_anyway = Proceed Anyway
+processing = Processing, please wait...
+shownlist = These are shown in the list below:
+selection_none = No package selected.
+selection_none_website = No website provided.
+install = Install
+install_button = Install Package
+install_header = Install a Package
+install_invalid = This file does not appear to be a valid openBVE package.
+install_version_new = The selected package is already installed, and is a newer version.
+install_version_old = The selected package is already installed, and is an older version.
+install_version_same = The selected package is already installed, and is an identical version.
+install_success = Package installation was successful.
+install_success_header = Installation Successful
+install_success_files = A list of files installed is shown below:
+install_select = Select Package......
+install_dependancies_unmet = The current package has unmet dependancies.
+install_dependancies_unmet_header = Dependancy Error
+creation_button = Create Package
+creation_header = Create a Package
+creation_saveas_button = Save As...
+creation_saveas_label = Save package as:
+creation_dependancies_nextstep = Package details and dependancies may be assigned in the following steps.
+creation_clearselection = Clear Selection
+creation_additems = Add Item(s)
+creation_selecteditems = The following files and folders will be packaged:
+creation_new_guid = The new package has been assinged the following GUID:
+creation_header = Enter Package Details
+creation_name = Please enter a package name.
+creation_author = Please enter a package author.
+creation_description = Please enter a package description.
+creation_version = Please enter a valid package version number in the following format: \r\n 1.0.0
+creation_version_invalid = You have entered an invalid version number. \r\n Please try again.
+creation_success = Package creation was successful.
+creation_success_header = Package Creation Successful
+creation_success_files = The following files were added to your package:
+creation_proceed = Proceed......
+creation_invalid_filename = The selected filename is invalid- Please retry.
+creation_new_id = The new package has been assinged the following GUID:
+creation_replace_id = Replacing the package with the following GUID:
+creation_save = Save Package
+replace_select = Replace this Package
+replace_choose = Please select the package you wish to replace:
+type_route = Route
+type_train = Train
+type_other = Other
+type_select = Please select the package type:
+uninstall_button = Uninstall Package
+uninstall_broken = Some existing packages may be broken by this action.
+uninstall_missing_xml = Unable to uninstall the selected package. \r\n XML file list missing.
+database_save_error = An error occured whilst saving the package database. \r\n Please check for write permissions.
 
 [controls]
 title = Personalizar Comandos
