--- a/openBVE/OpenBve/Data/Languages/ro-RO.cfg
+++ b/openBVE/OpenBve/Data/Languages/ro-RO.cfg
@@ -112,46 +112,59 @@ blackbox_format_csv = Valoare separată prin virgula
 blackbox_format_text = Text Formatat:
 blackbox_export = Exportă...
 
-[getaddons]
-title = Obţineţi Suplimente
-filter = Filtru:
-filter_routes = Rute
-filter_trains = Trenuri
-filter_libraries = Librarii
-filter_sharedlibraries = Librarii Impărţite
-filter_nowips = Fără WIP-uri
-filter_onlyupdates = Numai actualizări
-package = Detalii pachet
-package_install = Instalare
-package_install_progress = Instalare suplimente...
-package_install_download = Descărcare suplimente...
-package_install_failure = Următoarele pachete nu au putut fi instalate:
-package_remove = Elimină
-package_remove_progress = Eliminare suplimente...
-package_remove_failure = Următoarele pachete nu au putut fi eliminate:
-package_country = Ţară:\x20
-package_city = Oraş:\x20
-package_operator = Operator:\x20
-package_fictional = Imaginară
-package_author = Autor:\x20
-package_version_latest = Ultima versiune:\x20
-package_version_installed = Versiune instalată:\x20
-screenshot_previous = Precedentul
-screenshot_next = Următorul
-connect = Conectare la server...
-connect_error = Nu s-a putut încărca baza de date obţinută de la server:
-connect_failure = Nu s-a putut conecta la server.
-updates = Actualizări sunt disponibile pentru câteva dintre suplimentele instalate.
-updates_install = Actualizări sunt disponibile pentru câteva dintre suplimentele instalate. Vreţi să le instalaţi acum?
-updates_nomore = Nu mai sunt actualizări disponibile.
-other_countries = Alte Ţări
-other_cities = Alte Oraşe
-other_operators = Alţi Operatori
-suggest_1 = Următoarele pachete sunt sugerate de selecţia dvs.:
-suggest_2 = Vreţi să instalaţi şi aceste pachete?
-redundant_1 = Următoarele pachete nu vor mai funcţiona corect sau nu vor mai fi nevoie de ele după ce eliminaţi suplimentul selectat:
-redundant_2 = Doriţi să eliminaţi aceste pachete deasemenea?
-confirmation = Pentru a instala suplimentul selectat, un total de [size] trebuie să fie descărcat. Doriţi să continuaţi?
+[packages]
+proceed = Proceed...
+proceed_anyway = Proceed Anyway
+processing = Processing, please wait...
+shownlist = These are shown in the list below:
+selection_none = No package selected.
+selection_none_website = No website provided.
+install = Install
+install_button = Install Package
+install_header = Install a Package
+install_invalid = This file does not appear to be a valid openBVE package.
+install_version_new = The selected package is already installed, and is a newer version.
+install_version_old = The selected package is already installed, and is an older version.
+install_version_same = The selected package is already installed, and is an identical version.
+install_success = Package installation was successful.
+install_success_header = Installation Successful
+install_success_files = A list of files installed is shown below:
+install_select = Select Package......
+install_dependancies_unmet = The current package has unmet dependancies.
+install_dependancies_unmet_header = Dependancy Error
+creation_button = Create Package
+creation_header = Create a Package
+creation_saveas_button = Save As...
+creation_saveas_label = Save package as:
+creation_dependancies_nextstep = Package details and dependancies may be assigned in the following steps.
+creation_clearselection = Clear Selection
+creation_additems = Add Item(s)
+creation_selecteditems = The following files and folders will be packaged:
+creation_new_guid = The new package has been assinged the following GUID:
+creation_header = Enter Package Details
+creation_name = Please enter a package name.
+creation_author = Please enter a package author.
+creation_description = Please enter a package description.
+creation_version = Please enter a valid package version number in the following format: \r\n 1.0.0
+creation_version_invalid = You have entered an invalid version number. \r\n Please try again.
+creation_success = Package creation was successful.
+creation_success_header = Package Creation Successful
+creation_success_files = The following files were added to your package:
+creation_proceed = Proceed......
+creation_invalid_filename = The selected filename is invalid- Please retry.
+creation_new_id = The new package has been assinged the following GUID:
+creation_replace_id = Replacing the package with the following GUID:
+creation_save = Save Package
+replace_select = Replace this Package
+replace_choose = Please select the package you wish to replace:
+type_route = Route
+type_train = Train
+type_other = Other
+type_select = Please select the package type:
+uninstall_button = Uninstall Package
+uninstall_broken = Some existing packages may be broken by this action.
+uninstall_missing_xml = Unable to uninstall the selected package. \r\n XML file list missing.
+database_save_error = An error occured whilst saving the package database. \r\n Please check for write permissions.
 
 [controls]
 title = Particularizare Controale
