--- a/openBVE/OpenBve/Data/Languages/ru-RU.cfg
+++ b/openBVE/OpenBve/Data/Languages/ru-RU.cfg
@@ -112,46 +112,59 @@ blackbox_format_csv = CSV
 blackbox_format_text = Форматированный текст
 blackbox_export = Экспортировать...
 
-[getaddons]
-title = Скачать Дополнения
-filter = Фильтр:
-filter_routes = Маршруты
-filter_trains = Поезда
-filter_libraries = Библиотеки
-filter_sharedlibraries = Разделяемые библиотеки
-filter_nowips = Скрыть WIPs (в разработке)
-filter_onlyupdates = Только обновления
-package = Подробности
-package_install = Установить
-package_install_progress = Установка дополнений...
-package_install_download = Загрузка дополнений...
-package_install_failure = Невозможно установить данные пакеты:
-package_remove = Удалить
-package_remove_progress = Удалить дополнения...
-package_remove_failure = Невозможно удалить данные пакеты:
-package_country = Страна:\x20
-package_city = Город:\x20
-package_operator = Оператор:\x20
-package_fictional = Выдуманая
-package_author = Автор:\x20
-package_version_latest = Последняя версия:\x20
-package_version_installed = Установленная версия:\x20
-screenshot_previous = Предыдущий
-screenshot_next = Следующий
-connect = Подключение к серверу...
-connect_error = Невозможно загрузить базу данных с сервера:
-connect_failure = Невозможно подключиться к серверу.
-updates = Доступны обновления некоторых дополнений.
-updates_install = Доступны обновления некоторых дополнений. Установить их прямо сейчас?
-updates_nomore = Больше обновлений недоступно.
-other_countries = Другие страны
-other_cities = Другие города
-other_operators = Другие операторы
-suggest_1 = Вы выбрали данные пакеты:
-suggest_2 = Вы уверены, что хотите установить их?
-redundant_1 = Данные пакеты более не смогут функционировать или не будут нужны после удаления выбраных дополнений:
-redundant_2 = Удалить их?
-confirmation = Необходимо загрузить [size]. Продолжить?
+[packages]
+proceed = Proceed...
+proceed_anyway = Proceed Anyway
+processing = Processing, please wait...
+shownlist = These are shown in the list below:
+selection_none = No package selected.
+selection_none_website = No website provided.
+install = Install
+install_button = Install Package
+install_header = Install a Package
+install_invalid = This file does not appear to be a valid openBVE package.
+install_version_new = The selected package is already installed, and is a newer version.
+install_version_old = The selected package is already installed, and is an older version.
+install_version_same = The selected package is already installed, and is an identical version.
+install_success = Package installation was successful.
+install_success_header = Installation Successful
+install_success_files = A list of files installed is shown below:
+install_select = Select Package......
+install_dependancies_unmet = The current package has unmet dependancies.
+install_dependancies_unmet_header = Dependancy Error
+creation_button = Create Package
+creation_header = Create a Package
+creation_saveas_button = Save As...
+creation_saveas_label = Save package as:
+creation_dependancies_nextstep = Package details and dependancies may be assigned in the following steps.
+creation_clearselection = Clear Selection
+creation_additems = Add Item(s)
+creation_selecteditems = The following files and folders will be packaged:
+creation_new_guid = The new package has been assinged the following GUID:
+creation_header = Enter Package Details
+creation_name = Please enter a package name.
+creation_author = Please enter a package author.
+creation_description = Please enter a package description.
+creation_version = Please enter a valid package version number in the following format: \r\n 1.0.0
+creation_version_invalid = You have entered an invalid version number. \r\n Please try again.
+creation_success = Package creation was successful.
+creation_success_header = Package Creation Successful
+creation_success_files = The following files were added to your package:
+creation_proceed = Proceed......
+creation_invalid_filename = The selected filename is invalid- Please retry.
+creation_new_id = The new package has been assinged the following GUID:
+creation_replace_id = Replacing the package with the following GUID:
+creation_save = Save Package
+replace_select = Replace this Package
+replace_choose = Please select the package you wish to replace:
+type_route = Route
+type_train = Train
+type_other = Other
+type_select = Please select the package type:
+uninstall_button = Uninstall Package
+uninstall_broken = Some existing packages may be broken by this action.
+uninstall_missing_xml = Unable to uninstall the selected package. \r\n XML file list missing.
+database_save_error = An error occured whilst saving the package database. \r\n Please check for write permissions.
 
 [controls]
 title = Настройки управления
