--- a/openBVE/OpenBve/Data/Languages/zh-CN.cfg
+++ b/openBVE/OpenBve/Data/Languages/zh-CN.cfg
@@ -112,46 +112,59 @@ blackbox_format_csv = 逗号分隔文档
 blackbox_format_text = 已格式文檔
 blackbox_export = 汇出至...
 
-[getaddons]
-title = 取得外挂
-filter = 过滤器：
-filter_routes = 路线
-filter_trains = 车辆
-filter_libraries = 组件库
-filter_sharedlibraries = 共享组件库
-filter_nowips = 忽略进展中作业
-filter_onlyupdates = 只显示更新
-package = 外挂包详细信息
-package_install = 安装
-package_install_progress = 正在安装外挂...
-package_install_download = 正在下载外挂...
-package_install_failure = 下列外挂包未能成功安裝：
-package_remove = 卸载
-package_remove_progress = 正在卸载外挂...
-package_remove_failure = 下列外挂包未能成功卸载：
-package_country = 国家：
-package_city = 城市：
-package_operator = 营运商：
-package_fictional = 虚构：
-package_author = 作者：
-package_version_latest = 最新版本：
-package_version_installed = 已安装版本：
-screenshot_previous = 前面
-screenshot_next = 后面
-connect = 正在连接到服务器...
-connect_error = 未能加载服务器上的资料库信息：
-connect_failure = 未能与服务器联机。
-updates = 部分外挂包有更新。
-updates_install = 部分外挂包有更新。你要现在安装吗？
-updates_nomore = 没有更多的更新。
-other_countries = 其他国家
-other_cities = 其他城市
-other_operators = 其他营运商
-suggest_1 = 建议你选择以下外挂包：
-suggest_2 = 你也要安装这些外挂包吗？
-redundant_1 = 在卸载所选外挂包以后，以下外挂包将不再正常作业或将不再需要：
-redundant_2 = 你也要卸载这些外挂包吗？
-confirmation = 安裝所选外挂包需要下载共 [size] 的文档。你确定要继续吗？
+[packages]
+proceed = Proceed...
+proceed_anyway = Proceed Anyway
+processing = Processing, please wait...
+shownlist = These are shown in the list below:
+selection_none = No package selected.
+selection_none_website = No website provided.
+install = Install
+install_button = Install Package
+install_header = Install a Package
+install_invalid = This file does not appear to be a valid openBVE package.
+install_version_new = The selected package is already installed, and is a newer version.
+install_version_old = The selected package is already installed, and is an older version.
+install_version_same = The selected package is already installed, and is an identical version.
+install_success = Package installation was successful.
+install_success_header = Installation Successful
+install_success_files = A list of files installed is shown below:
+install_select = Select Package......
+install_dependancies_unmet = The current package has unmet dependancies.
+install_dependancies_unmet_header = Dependancy Error
+creation_button = Create Package
+creation_header = Create a Package
+creation_saveas_button = Save As...
+creation_saveas_label = Save package as:
+creation_dependancies_nextstep = Package details and dependancies may be assigned in the following steps.
+creation_clearselection = Clear Selection
+creation_additems = Add Item(s)
+creation_selecteditems = The following files and folders will be packaged:
+creation_new_guid = The new package has been assinged the following GUID:
+creation_header = Enter Package Details
+creation_name = Please enter a package name.
+creation_author = Please enter a package author.
+creation_description = Please enter a package description.
+creation_version = Please enter a valid package version number in the following format: \r\n 1.0.0
+creation_version_invalid = You have entered an invalid version number. \r\n Please try again.
+creation_success = Package creation was successful.
+creation_success_header = Package Creation Successful
+creation_success_files = The following files were added to your package:
+creation_proceed = Proceed......
+creation_invalid_filename = The selected filename is invalid- Please retry.
+creation_new_id = The new package has been assinged the following GUID:
+creation_replace_id = Replacing the package with the following GUID:
+creation_save = Save Package
+replace_select = Replace this Package
+replace_choose = Please select the package you wish to replace:
+type_route = Route
+type_train = Train
+type_other = Other
+type_select = Please select the package type:
+uninstall_button = Uninstall Package
+uninstall_broken = Some existing packages may be broken by this action.
+uninstall_missing_xml = Unable to uninstall the selected package. \r\n XML file list missing.
+database_save_error = An error occured whilst saving the package database. \r\n Please check for write permissions.
 
 [controls]
 title = 自定义按键
