--- a/openBVE/OpenBve/Data/Languages/zh-HK.cfg
+++ b/openBVE/OpenBve/Data/Languages/zh-HK.cfg
@@ -112,46 +112,59 @@ blackbox_format_csv = CSV
 blackbox_format_text = 已格式化文本
 blackbox_export = 匯出……
 
-[getaddons]
-title = 取得外掛
-filter = 過濾器：
-filter_routes = 路線
-filter_trains = 列車
-filter_libraries = 組件庫
-filter_sharedlibraries = 共享組件庫
-filter_nowips = 忽略開發中的作品
-filter_onlyupdates = 只顯示更新
-package = 外掛詳細資訊
-package_install = 安裝
-package_install_progress = 正在安裝外掛……
-package_install_download = 正在下載外掛……
-package_install_failure = 下列外掛未能成功安裝：
-package_remove = 移除
-package_remove_progress = 正在移除外掛……
-package_remove_failure = 下列外掛未能成功移除：
-package_country = 國家：
-package_city = 城市：
-package_operator = 營運機構：
-package_fictional = 虛構：
-package_author = 作者：
-package_version_latest = 最新版本：
-package_version_installed = 已安裝版本：
-screenshot_previous = 上一個
-screenshot_next = 下一個
-connect = 正在連接到伺服器……
-connect_error = 未能載入伺服器上的資料：
-connect_failure = 未能連接到伺服器。
-updates = 部分外掛有更新。
-updates_install = 部分外掛有更新。你要現在安裝嗎？
-updates_nomore = 沒有其他更新。
-other_countries = 其他國家
-other_cities = 其他城市
-other_operators = 其他營運機構
-suggest_1 = 建議你選擇以下外掛：
-suggest_2 = 你也要安裝這些外掛嗎？
-redundant_1 = 在移除所選外掛以後，以下外掛將不能正常運作或將不再需要：
-redundant_2 = 你也要移除這些外掛嗎？
-confirmation = 安裝所選外掛需要下載共 [size] 的檔案。你確定要繼續嗎？
+[packages]
+proceed = Proceed...
+proceed_anyway = Proceed Anyway
+processing = Processing, please wait...
+shownlist = These are shown in the list below:
+selection_none = No package selected.
+selection_none_website = No website provided.
+install = Install
+install_button = Install Package
+install_header = Install a Package
+install_invalid = This file does not appear to be a valid openBVE package.
+install_version_new = The selected package is already installed, and is a newer version.
+install_version_old = The selected package is already installed, and is an older version.
+install_version_same = The selected package is already installed, and is an identical version.
+install_success = Package installation was successful.
+install_success_header = Installation Successful
+install_success_files = A list of files installed is shown below:
+install_select = Select Package......
+install_dependancies_unmet = The current package has unmet dependancies.
+install_dependancies_unmet_header = Dependancy Error
+creation_button = Create Package
+creation_header = Create a Package
+creation_saveas_button = Save As...
+creation_saveas_label = Save package as:
+creation_dependancies_nextstep = Package details and dependancies may be assigned in the following steps.
+creation_clearselection = Clear Selection
+creation_additems = Add Item(s)
+creation_selecteditems = The following files and folders will be packaged:
+creation_new_guid = The new package has been assinged the following GUID:
+creation_header = Enter Package Details
+creation_name = Please enter a package name.
+creation_author = Please enter a package author.
+creation_description = Please enter a package description.
+creation_version = Please enter a valid package version number in the following format: \r\n 1.0.0
+creation_version_invalid = You have entered an invalid version number. \r\n Please try again.
+creation_success = Package creation was successful.
+creation_success_header = Package Creation Successful
+creation_success_files = The following files were added to your package:
+creation_proceed = Proceed......
+creation_invalid_filename = The selected filename is invalid- Please retry.
+creation_new_id = The new package has been assinged the following GUID:
+creation_replace_id = Replacing the package with the following GUID:
+creation_save = Save Package
+replace_select = Replace this Package
+replace_choose = Please select the package you wish to replace:
+type_route = Route
+type_train = Train
+type_other = Other
+type_select = Please select the package type:
+uninstall_button = Uninstall Package
+uninstall_broken = Some existing packages may be broken by this action.
+uninstall_missing_xml = Unable to uninstall the selected package. \r\n XML file list missing.
+database_save_error = An error occured whilst saving the package database. \r\n Please check for write permissions.
 
 [controls]
 title = 個人化設定
