--- a/openBVE/OpenBve/Data/Languages/ca-ES.cfg
+++ b/openBVE/OpenBve/Data/Languages/ca-ES.cfg
@@ -112,46 +112,59 @@ blackbox_format_csv = Valors separats per comes
 blackbox_format_text = Text formatat
 blackbox_export = Exporta...
 
-[getaddons]
-title = Extensions
-filter = Filtre:
-filter_routes = Rutes
-filter_trains = Trens
-filter_libraries = Biblioteques
-filter_sharedlibraries = Biblioteques compartides
-filter_nowips = Versions acabades
-filter_onlyupdates = Només actualitzacions
-package = Detalls del paquet
-package_install = Instal·la
-package_install_progress = S'estan instal·lant les extensions...
-package_install_download = S'estan baixant les extensions...
-package_install_failure = No s'han pogut instal·lar els paquets següents:
-package_remove = Elimina
-package_remove_progress = S'estan eliminant les extensions...
-package_remove_failure = No s'han pogut eliminar els paquets següents:
-package_country = País:\x20
-package_city = Ciutat:\x20
-package_operator = Operador:\x20
-package_fictional = Fictícia
-package_author = Autor:\x20
-package_version_latest = Última versió:\x20
-package_version_installed = Versió instal·lada:\x20
-screenshot_previous = Anterior
-screenshot_next = Següent
-connect = S'està connectant al servidor...
-connect_error = No s'ha pogut carregar la base de dades obtinguda del servidor:
-connect_failure = No s'ha pogut contactar amb el servidor.
-updates = Hi ha actualitzacions per a algunes de les extensions.
-updates_install = Hi ha actualitzacions per a algunes de les extensions instal·lades. Voleu instal·lar-les ara?
-updates_nomore = No hi ha més actualitzacions disponibles.
-other_countries = Altres països
-other_cities = Altres ciutats
-other_operators = Altres operadors
-suggest_1 = Paquets recomanats segons la selecció:
-suggest_2 = Voleu instal·lar-los també?
-redundant_1 = Els següents paquets no funcionaran correctament o no seran imprescindibles després d'eliminar l'extensió següent:
-redundant_2 = Voleu eliminar aquests paquets també?
-confirmation = Per tal d'instal·lar l'extensió sel·leccionada, s'han de baixar [size]. Voleu continuar?
+[packages]
+proceed = Proceed...
+proceed_anyway = Proceed Anyway
+processing = Processing, please wait...
+shownlist = These are shown in the list below:
+selection_none = No package selected.
+selection_none_website = No website provided.
+install = Install
+install_button = Install Package
+install_header = Install a Package
+install_invalid = This file does not appear to be a valid openBVE package.
+install_version_new = The selected package is already installed, and is a newer version.
+install_version_old = The selected package is already installed, and is an older version.
+install_version_same = The selected package is already installed, and is an identical version.
+install_success = Package installation was successful.
+install_success_header = Installation Successful
+install_success_files = A list of files installed is shown below:
+install_select = Select Package......
+install_dependancies_unmet = The current package has unmet dependancies.
+install_dependancies_unmet_header = Dependancy Error
+creation_button = Create Package
+creation_header = Create a Package
+creation_saveas_button = Save As...
+creation_saveas_label = Save package as:
+creation_dependancies_nextstep = Package details and dependancies may be assigned in the following steps.
+creation_clearselection = Clear Selection
+creation_additems = Add Item(s)
+creation_selecteditems = The following files and folders will be packaged:
+creation_new_guid = The new package has been assinged the following GUID:
+creation_header = Enter Package Details
+creation_name = Please enter a package name.
+creation_author = Please enter a package author.
+creation_description = Please enter a package description.
+creation_version = Please enter a valid package version number in the following format: \r\n 1.0.0
+creation_version_invalid = You have entered an invalid version number. \r\n Please try again.
+creation_success = Package creation was successful.
+creation_success_header = Package Creation Successful
+creation_success_files = The following files were added to your package:
+creation_proceed = Proceed......
+creation_invalid_filename = The selected filename is invalid- Please retry.
+creation_new_id = The new package has been assinged the following GUID:
+creation_replace_id = Replacing the package with the following GUID:
+creation_save = Save Package
+replace_select = Replace this Package
+replace_choose = Please select the package you wish to replace:
+type_route = Route
+type_train = Train
+type_other = Other
+type_select = Please select the package type:
+uninstall_button = Uninstall Package
+uninstall_broken = Some existing packages may be broken by this action.
+uninstall_missing_xml = Unable to uninstall the selected package. \r\n XML file list missing.
+database_save_error = An error occured whilst saving the package database. \r\n Please check for write permissions.
 
 [controls]
 title = Personalitza els controls
