--- a/openBVE/OpenBve/Data/Languages/de-DE.cfg
+++ b/openBVE/OpenBve/Data/Languages/de-DE.cfg
@@ -112,46 +112,59 @@ blackbox_format_csv = CSV
 blackbox_format_text = Formatierter Text
 blackbox_export = Exportieren...
 
-[getaddons]
-title = Installiere Add-ons
-filter = Filter:
-filter_routes = Strecken
-filter_trains = Züge
-filter_libraries = Bibliotheken
-filter_sharedlibraries = Gemeinsame Bibliotheken
-filter_nowips = Nur fertige
-filter_onlyupdates = Nur Updates
-package = Packetdetails
-package_install = Installieren
-package_install_progress = Installiere Add-ons...
-package_install_download = Lade Add-ons herunter...
-package_install_failure = Die folgenden Pakete konnten nicht installiert werden:
-package_remove = Entfernen
-package_remove_progress = Entferne Add-ons...
-package_remove_failure = Die folgenden Pakete konnten nicht entfernt werden:
-package_country = Land:\x20
-package_city = Stadt:\x20
-package_operator = Betreiber:\x20
-package_fictional = Fiktiv
-package_author = Autor:\x20
-package_version_latest = Aktuell verfügbare Version:\x20
-package_version_installed = Installierte Version:\x20
-screenshot_previous = Zurück
-screenshot_next = Vor
-connect = Verbinde mit Server...
-connect_error = Die vom Server bereitgestellte Datenbank konnte nicht gelesen werden:
-connect_failure = Konnte nicht mit dem Server verbinden.
-updates = Für einige deiner Add-ons sind Updates verfügbar.
-updates_install = Für einige deiner Add-ons sind Updates verfügbar. Möchtest du diese jetzt installieren?
-updates_nomore = Keine weiteren Updates verfügbar.
-other_countries = Andere Länder
-other_cities = Andere Städte
-other_operators = Andere Betreiber
-suggest_1 = Die von dir ausgewählten Pakete besitzen folgende Abhängigkeiten:
-suggest_2 = Willst du diese Pakete ebenfalls installieren?
-redundant_1 = Folgende Pakete werden nicht mehr korrekt funktionieren, bzw. werden nicht mehr benötigt, wenn die von dir ausgewählten Pakete entfernt werden:
-redundant_2 = Willst du diese Pakete ebenfalls entfernen?
-confirmation = Um die ausgewählten Pakete zu installieren, müssen [size] heruntergeladen werden. Willst du fortfahren?
+[packages]
+proceed = Proceed...
+proceed_anyway = Proceed Anyway
+processing = Processing, please wait...
+shownlist = These are shown in the list below:
+selection_none = No package selected.
+selection_none_website = No website provided.
+install = Install
+install_button = Install Package
+install_header = Install a Package
+install_invalid = This file does not appear to be a valid openBVE package.
+install_version_new = The selected package is already installed, and is a newer version.
+install_version_old = The selected package is already installed, and is an older version.
+install_version_same = The selected package is already installed, and is an identical version.
+install_success = Package installation was successful.
+install_success_header = Installation Successful
+install_success_files = A list of files installed is shown below:
+install_select = Select Package......
+install_dependancies_unmet = The current package has unmet dependancies.
+install_dependancies_unmet_header = Dependancy Error
+creation_button = Create Package
+creation_header = Create a Package
+creation_saveas_button = Save As...
+creation_saveas_label = Save package as:
+creation_dependancies_nextstep = Package details and dependancies may be assigned in the following steps.
+creation_clearselection = Clear Selection
+creation_additems = Add Item(s)
+creation_selecteditems = The following files and folders will be packaged:
+creation_new_guid = The new package has been assinged the following GUID:
+creation_header = Enter Package Details
+creation_name = Please enter a package name.
+creation_author = Please enter a package author.
+creation_description = Please enter a package description.
+creation_version = Please enter a valid package version number in the following format: \r\n 1.0.0
+creation_version_invalid = You have entered an invalid version number. \r\n Please try again.
+creation_success = Package creation was successful.
+creation_success_header = Package Creation Successful
+creation_success_files = The following files were added to your package:
+creation_proceed = Proceed......
+creation_invalid_filename = The selected filename is invalid- Please retry.
+creation_new_id = The new package has been assinged the following GUID:
+creation_replace_id = Replacing the package with the following GUID:
+creation_save = Save Package
+replace_select = Replace this Package
+replace_choose = Please select the package you wish to replace:
+type_route = Route
+type_train = Train
+type_other = Other
+type_select = Please select the package type:
+uninstall_button = Uninstall Package
+uninstall_broken = Some existing packages may be broken by this action.
+uninstall_missing_xml = Unable to uninstall the selected package. \r\n XML file list missing.
+database_save_error = An error occured whilst saving the package database. \r\n Please check for write permissions.
 
 [controls]
 title = Steuerung anpassen
