--- a/openBVE/OpenBve/Data/Languages/fi-FI.cfg
+++ b/openBVE/OpenBve/Data/Languages/fi-FI.cfg
@@ -112,46 +112,59 @@ blackbox_format_csv = Pilkulla erotetut arvot
 blackbox_format_text = Formatoitu teksti
 blackbox_export = Vie...
 
-[getaddons]
-title = Hanki lisäosia
-filter = Suodatin:
-filter_routes = Reitit
-filter_trains = Junat
-filter_libraries = Kirjastot
-filter_sharedlibraries = Jaetut kirjastot
-filter_nowips = Ei keskeneräisiä töitä
-filter_onlyupdates = Näytä vain päivitykset
-package = Paketin tiedot
-package_install = Asenna
-package_install_progress = Asennetaan lisäosia...
-package_install_download = Ladataan lisäosia...
-package_install_failure = Seuraavia paketteja ei voitu ladata/asentaa:
-package_remove = Poista
-package_remove_progress = Poistetaan lisäosia...
-package_remove_failure = Seuraavia paketteja ei voitu poistaa:
-package_country = Maa:\x20
-package_city = Kaupunki:\x20
-package_operator = Operoija:\x20
-package_fictional = Fiktiivinen
-package_author = Tekijä:\x20
-package_version_latest = Viimeisin versio:\x20
-package_version_installed = Asennettu versio:\x20
-screenshot_previous = Edellinen
-screenshot_next = Seuraava
-connect = Yhdistetään palvelimelle...
-connect_error = Palvelimen tietokantaa ei voitu lukea:
-connect_failure = Palvelimeen yhdistys epäonnistui.
-updates = Lisäosiisi on saatavilla päivityksiä.
-updates_install = Lisäosiisi on saatavilla päivityksiä. Haluatko asentaa ne nyt?
-updates_nomore = Muita päivityksiä ei ole saatavilla.
-other_countries = Muut maat
-other_cities = Muut kaupungit
-other_operators = Muut operoijat
-suggest_1 = Seuraavia paketteja suositellaan asennettaviksi:
-suggest_2 = Haluatko asentaa suositellut paketit?
-redundant_1 = Kun olet poistanut paketin, seuraavat paketit eivät enää toimi tai niitä ei tarvita:
-redundant_2 = Haluatko poistaa nämäkin paketit?
-confirmation = Asentaaksesi haluamasi lisäosan, [size] täytyy ladata palvelimelta. Haluatko jatkaa?
+[packages]
+proceed = Proceed...
+proceed_anyway = Proceed Anyway
+processing = Processing, please wait...
+shownlist = These are shown in the list below:
+selection_none = No package selected.
+selection_none_website = No website provided.
+install = Install
+install_button = Install Package
+install_header = Install a Package
+install_invalid = This file does not appear to be a valid openBVE package.
+install_version_new = The selected package is already installed, and is a newer version.
+install_version_old = The selected package is already installed, and is an older version.
+install_version_same = The selected package is already installed, and is an identical version.
+install_success = Package installation was successful.
+install_success_header = Installation Successful
+install_success_files = A list of files installed is shown below:
+install_select = Select Package......
+install_dependancies_unmet = The current package has unmet dependancies.
+install_dependancies_unmet_header = Dependancy Error
+creation_button = Create Package
+creation_header = Create a Package
+creation_saveas_button = Save As...
+creation_saveas_label = Save package as:
+creation_dependancies_nextstep = Package details and dependancies may be assigned in the following steps.
+creation_clearselection = Clear Selection
+creation_additems = Add Item(s)
+creation_selecteditems = The following files and folders will be packaged:
+creation_new_guid = The new package has been assinged the following GUID:
+creation_header = Enter Package Details
+creation_name = Please enter a package name.
+creation_author = Please enter a package author.
+creation_description = Please enter a package description.
+creation_version = Please enter a valid package version number in the following format: \r\n 1.0.0
+creation_version_invalid = You have entered an invalid version number. \r\n Please try again.
+creation_success = Package creation was successful.
+creation_success_header = Package Creation Successful
+creation_success_files = The following files were added to your package:
+creation_proceed = Proceed......
+creation_invalid_filename = The selected filename is invalid- Please retry.
+creation_new_id = The new package has been assinged the following GUID:
+creation_replace_id = Replacing the package with the following GUID:
+creation_save = Save Package
+replace_select = Replace this Package
+replace_choose = Please select the package you wish to replace:
+type_route = Route
+type_train = Train
+type_other = Other
+type_select = Please select the package type:
+uninstall_button = Uninstall Package
+uninstall_broken = Some existing packages may be broken by this action.
+uninstall_missing_xml = Unable to uninstall the selected package. \r\n XML file list missing.
+database_save_error = An error occured whilst saving the package database. \r\n Please check for write permissions.
 
 [controls]
 title = Muokkaa ohjaimia
