--- a/openBVE/OpenBve/Data/Languages/it-IT.cfg
+++ b/openBVE/OpenBve/Data/Languages/it-IT.cfg
@@ -112,46 +112,59 @@ blackbox_format_csv = CSV
 blackbox_format_text = Testo formattato
 blackbox_export = Esporta
 
-[getaddons]
-title = Gestione componenti
-filter = Filtri:
-filter_routes = Linee
-filter_trains = Treni
-filter_libraries = Librerie
-filter_sharedlibraries = Librerie condivise
-filter_nowips = Non WIP
-filter_onlyupdates = Solo aggiornamenti
-package = Dettagli pacchetto
-package_install = Installa
-package_install_progress = Installazione in corso...
-package_install_download = Download in corso...
-package_install_failure = Questi componenti non hanno potuto essere installati:
-package_remove = Rimuovi
-package_remove_progress = Rimozione in corso...
-package_remove_failure = Questi componenti non hanno potuto essere rimossi:
-package_country = Nazione:\x20
-package_city = Città:\x20
-package_operator = Operatore:\x20
-package_fictional = Di fantasia
-package_author = Autore:\x20
-package_version_latest = Ultima versione:\x20
-package_version_installed = Versione installata:\x20
-screenshot_previous = Precedente
-screenshot_next = Successivo
-connect = Collegamento al server...
-connect_error = Impossibile caricare il database dal server:
-connect_failure = Impossibile collegarsi al server.
-updates = Sono disponibili aggiornamenti per alcuni componenti.
-updates_install = Sono disponibili aggiornamenti per alcuni componenti. Vuoi installarli ora?
-updates_nomore = Non ci sono altri aggiornamenti disponibili.
-other_countries = Altre Nazioni
-other_cities = Altre Città
-other_operators = Altri Operatori
-suggest_1 = Pacchetti suggeriti dalle selezioni:
-suggest_2 = Vuoi installare questi pacchetti ugualmente?
-redundant_1 = Questi pacchetti non funzioneranno più correttamente o non serviranno più dopo la rimozione dei componenti selezionati:
-redundant_2 = Vuoi rimuovere questi pacchetti ugualmente?
-confirmation = Per installare i componenti selezionati occorre scaricare [size]. Vuoi procedere?
+[packages]
+proceed = Proceed...
+proceed_anyway = Proceed Anyway
+processing = Processing, please wait...
+shownlist = These are shown in the list below:
+selection_none = No package selected.
+selection_none_website = No website provided.
+install = Install
+install_button = Install Package
+install_header = Install a Package
+install_invalid = This file does not appear to be a valid openBVE package.
+install_version_new = The selected package is already installed, and is a newer version.
+install_version_old = The selected package is already installed, and is an older version.
+install_version_same = The selected package is already installed, and is an identical version.
+install_success = Package installation was successful.
+install_success_header = Installation Successful
+install_success_files = A list of files installed is shown below:
+install_select = Select Package......
+install_dependancies_unmet = The current package has unmet dependancies.
+install_dependancies_unmet_header = Dependancy Error
+creation_button = Create Package
+creation_header = Create a Package
+creation_saveas_button = Save As...
+creation_saveas_label = Save package as:
+creation_dependancies_nextstep = Package details and dependancies may be assigned in the following steps.
+creation_clearselection = Clear Selection
+creation_additems = Add Item(s)
+creation_selecteditems = The following files and folders will be packaged:
+creation_new_guid = The new package has been assinged the following GUID:
+creation_header = Enter Package Details
+creation_name = Please enter a package name.
+creation_author = Please enter a package author.
+creation_description = Please enter a package description.
+creation_version = Please enter a valid package version number in the following format: \r\n 1.0.0
+creation_version_invalid = You have entered an invalid version number. \r\n Please try again.
+creation_success = Package creation was successful.
+creation_success_header = Package Creation Successful
+creation_success_files = The following files were added to your package:
+creation_proceed = Proceed......
+creation_invalid_filename = The selected filename is invalid- Please retry.
+creation_new_id = The new package has been assinged the following GUID:
+creation_replace_id = Replacing the package with the following GUID:
+creation_save = Save Package
+replace_select = Replace this Package
+replace_choose = Please select the package you wish to replace:
+type_route = Route
+type_train = Train
+type_other = Other
+type_select = Please select the package type:
+uninstall_button = Uninstall Package
+uninstall_broken = Some existing packages may be broken by this action.
+uninstall_missing_xml = Unable to uninstall the selected package. \r\n XML file list missing.
+database_save_error = An error occured whilst saving the package database. \r\n Please check for write permissions.
 
 [controls]
 title = Impostazione comandi
