--- a/openBVE/OpenBve/Data/Languages/ko-KR.cfg
+++ b/openBVE/OpenBve/Data/Languages/ko-KR.cfg
@@ -112,46 +112,59 @@ blackbox_format_csv = 콤마 구분 형식(csv) 파일
 blackbox_format_text = 서식 있는 텍스트
 blackbox_export = 내보내기...
 
-[getaddons]
-title = Get Add-ons
-filter = Filter:
-filter_routes = Routes
-filter_trains = Trains
-filter_libraries = Libraries
-filter_sharedlibraries = Shared libraries
-filter_nowips = No WIPs
-filter_onlyupdates = Only updates
-package = Package details
-package_install = Install
-package_install_progress = Installing add-ons...
-package_install_download = Downloading add-ons...
-package_install_failure = The following packages could not be installed:
-package_remove = Remove
-package_remove_progress = Removing add-ons...
-package_remove_failure = The following packages could not be removed:
-package_country = Country:\x20
-package_city = City:\x20
-package_operator = Operator:\x20
-package_fictional = Fictional
-package_author = Author:\x20
-package_version_latest = Latest version:\x20
-package_version_installed = Installed version:\x20
-screenshot_previous = Previous
-screenshot_next = Next
-connect = Connecting to server...
-connect_error = Could not load the database obtained from the server:
-connect_failure = Could not connect to server.
-updates = Updates for some of your add-ons are available.
-updates_install = Updates for some of your add-ons are available. Do you want to install them now?
-updates_nomore = No more updates are available.
-other_countries = Other Countries
-other_cities = Other Cities
-other_operators = Other Operators
-suggest_1 = The following packages are suggested by your selection:
-suggest_2 = Do you want to install these packages as well?
-redundant_1 = The following packages will no longer function properly or will be no longer needed after you remove the selected add-on:
-redundant_2 = Do you want to remove these packages as well?
-confirmation = In order to install the selected add-on, a total of [size] has to be downloaded. Do you want to proceed?
+[packages]
+proceed = Proceed...
+proceed_anyway = Proceed Anyway
+processing = Processing, please wait...
+shownlist = These are shown in the list below:
+selection_none = No package selected.
+selection_none_website = No website provided.
+install = Install
+install_button = Install Package
+install_header = Install a Package
+install_invalid = This file does not appear to be a valid openBVE package.
+install_version_new = The selected package is already installed, and is a newer version.
+install_version_old = The selected package is already installed, and is an older version.
+install_version_same = The selected package is already installed, and is an identical version.
+install_success = Package installation was successful.
+install_success_header = Installation Successful
+install_success_files = A list of files installed is shown below:
+install_select = Select Package......
+install_dependancies_unmet = The current package has unmet dependancies.
+install_dependancies_unmet_header = Dependancy Error
+creation_button = Create Package
+creation_header = Create a Package
+creation_saveas_button = Save As...
+creation_saveas_label = Save package as:
+creation_dependancies_nextstep = Package details and dependancies may be assigned in the following steps.
+creation_clearselection = Clear Selection
+creation_additems = Add Item(s)
+creation_selecteditems = The following files and folders will be packaged:
+creation_new_guid = The new package has been assinged the following GUID:
+creation_header = Enter Package Details
+creation_name = Please enter a package name.
+creation_author = Please enter a package author.
+creation_description = Please enter a package description.
+creation_version = Please enter a valid package version number in the following format: \r\n 1.0.0
+creation_version_invalid = You have entered an invalid version number. \r\n Please try again.
+creation_success = Package creation was successful.
+creation_success_header = Package Creation Successful
+creation_success_files = The following files were added to your package:
+creation_proceed = Proceed......
+creation_invalid_filename = The selected filename is invalid- Please retry.
+creation_new_id = The new package has been assinged the following GUID:
+creation_replace_id = Replacing the package with the following GUID:
+creation_save = Save Package
+replace_select = Replace this Package
+replace_choose = Please select the package you wish to replace:
+type_route = Route
+type_train = Train
+type_other = Other
+type_select = Please select the package type:
+uninstall_button = Uninstall Package
+uninstall_broken = Some existing packages may be broken by this action.
+uninstall_missing_xml = Unable to uninstall the selected package. \r\n XML file list missing.
+database_save_error = An error occured whilst saving the package database. \r\n Please check for write permissions.
 
 [controls]
 title = 조작 설정
